tests/ui/issues/issue-10465.stderr
error[E0599]: no method named `foo` found for reference `&B` in the current scope
  --> $DIR/issue-10465.rs:17:15
   |
LL |             b.foo();
   |               ^^^ method not found in `&B`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL |         use a::A;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
